@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Abp" Version="5.13.0" />
     <PackageReference Include="Confluent.Kafka" Version="1.5.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
 </Project>
